--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,12 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Azure CLI script
+        uses: azure/cli@v2
+        with:
+          inlineScript: |
+            az version
+    
       - name: Azure login
         uses: azure/login@v1
         with:
