Update Terraform job to use ubuntu-latest

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -77,7 +77,7 @@ env:
 jobs:
   terraform-plan:
     name: 'Terraform Plan'
-    runs-on: ubuntu-static
+    runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
 
     env:
