--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -219,7 +219,7 @@ jobs:
   terraform-apply:
     name: 'Terraform Apply'
     if: needs.terraform-plan.outputs.tfplanExitCode == 2
-    runs-on: ubuntu-static
+    runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
     needs: [ terraform-plan ]
 
