--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -216,12 +216,25 @@ jobs:
           terraform workspace select default
           terraform workspace delete ${{ steps.get-workspace.outputs.workspace }}
 
+  manual-approval:
+    name: 'Manual Approval'
+    if: needs.terraform-plan.outputs.tfplanExitCode == 2
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
+    needs: [ terraform-plan ]
+    steps:
+      - name: Waiting for manual approval
+        run: |
+          echo "✅ Terraform plan completed successfully with changes detected."
+          echo "⏳ Waiting for manual approval to proceed with terraform apply..."
+          echo "👤 Please review the plan output above and approve this job to continue with the deployment."
+
   terraform-apply:
     name: 'Terraform Apply'
     if: needs.terraform-plan.outputs.tfplanExitCode == 2
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
-    needs: [ terraform-plan ]
+    needs: [ terraform-plan, manual-approval ]
 
     defaults:
       run:
