--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -218,8 +218,13 @@ jobs:
 
   manual-approval:
     name: 'Manual Approval'
+    uses: trstringer/manual-approval@v1
     if: needs.terraform-plan.outputs.tfplanExitCode == 2
     runs-on: ubuntu-latest
+    with:
+      approvers: ['@MaciekCiurla']
+      issue-title: "Manual Approval Required for Terraform Apply"
+      issue-body: "Please approve or deny the deployment."
     environment: 
       name: ${{ inputs.environment }}
       url: ''
