--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         uses: trstringer/manual-approval@v1.9.0
         with:
           approvers: mikec@poczta.onet.pl
+          secret: ${{ github.TOKEN }}
           issue-title: Wait for a decision
           exclude-workflow-initiator-as-approver: no
       - name: Azure login
