Update permissions in main.yml to write-all

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@
 name: Run Azure Login with OIDC
 on: [push]
 
-permissions:
-  id-token: write
-  contents: read
+permissions: write-all
+#  id-token: write
+#  contents: read
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
